# fuckterpreter

./: Cargo.toml  README.md
examples/: golden_infinite.b  golden_short.b  hello.b  life.b  mandel.b
src/: main.rs
src/cli/: cli.rs  mod.rs
src/compiler/: compiler.rs
src/interpreter/: interpreter.rs
src/lexer/: lexer.rs
src/nom/: parser.rs
src/optimizer/: mod.rs  optimizer.rs
src/parser/: mod.rs  parser.rs
src/util/: mod.rs  util.rs
